Fixed some visual issues with the treeviews having small gaps between cells, fixed removing sendables and restricted it to only root items, added file sizes to tree items, changed treeitem names to be an attribute seperate from the displayed value

--- a/src/GUI/darkblue.css
+++ b/src/GUI/darkblue.css
@@ -13,7 +13,7 @@
 }
 
 
-/*Built using some code from http://fxexperience.com/2011/12/styling-fx-buttons-with-css/, record-sales*/
+/*Roughly based off the record-sales button from http://fxexperience.com/2011/12/styling-fx-buttons-with-css/*/
 .button {
 	-fx-text-fill: white;
 	-fx-padding: 4 8 11 8;
@@ -51,10 +51,11 @@
 	-fx-background-color: white;
 }
 
+
 .separator {
 	-fx-background-color: transparent;
 }
-.separator *.line {
+.separator .line {
 	-fx-border-width: 1px;
 	-fx-border-color: #4077a5;
 	-fx-background-color: transparent;
@@ -66,10 +67,14 @@
 }
 
 
-.tree-view {
-	-fx-box-border: hidden;
+.tree-view,
+.tree-view:focused {
 	-fx-focus-color: transparent;
 	-fx-faint-focus-color: transparent;
+	-fx-background-color: #396a93;
+	-fx-box-border: hidden;
+	-fx-background-radius: 0px;
+	-fx-background-insets: 0px;
 }
 .tree-view .tree-cell {
 	-fx-background-color: #396a93;
